[package]
name = "outdated2"
version = "0.1.0"
authors = ["Ricky <Ricky@Hosfelt.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.63"
semver = "1"
curl = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.3.1"
anyhow = "1"